workloads/mlflow-eks-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mlflow
  name: service-mlflow-boston-housing
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: app-mlflow-boston-housing
